# ross

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/ross/: bbox.hpp  canvas.hpp  color.hpp  config.hpp  line2.hpp  ross.hpp  surface_rgb24.hpp  types.hpp  vector2.hpp
include/ross/detail/: algorithms.hpp
test/: CMakeLists.txt  bbox_test.cpp  canvas_test.cpp  color_test.cpp  line2_test.cpp  ppm_test.cpp  surface_rgb24_test.cpp  test_util.hpp  vector2_test.cpp
tools/: ppm.hpp
